# ecipher

./: Cargo.toml  README.md
.github/workflows/: ci.yml
client/: Cargo.toml  build.rs
client/src/: config.rs  lib.rs  main.rs
client/src/app/: mod.rs
client/src/app/style/: icon.rs  text.rs
client/src/logic/: mod.rs  util.rs
client/src/ui/assets/: assets.rs
client/ui/: app.slint  sidebar.slint  util.slint
client/ui/assets/: assets.slint
client/ui/page/: home.slint
docs/: 00.00.ecipher_tech_specs.md  02.01.client_architecture_detail.md  02.02.client_code_detail.md  02.03.client_ui_layout.md  03.02.server_code_detail.md  client_architecture_detail.md  client_ui_layout.md  ecipher_tech_specs.md  客户端架构实现细节-96422c56ae.md  密钥管理软件设计要点-64f2854386.md
server/: .env  Cargo.toml
server/config/: server.toml
server/migrations/: 20240101000000_init_keys_table.up.sql
server/src/: main.rs
server/src/api/: key.rs
server/src/config/: database.rs
server/src/model/: key.rs  mod.rs
server/src/repository/: lib.rs  mod.rs
server/src/service/: lib.rs  mod.rs
server/src/utils/: encryption.rs  middleware.rs  mod.rs
shared/: Cargo.toml
shared/src/: main.rs
