


[workspace]
resolver = "2"       # 使用 Cargo v2 依赖解析器，确保依赖一致性
members = [
    "shared",
    "server",
    "client",
]


[workspace.dependencies]
# 声明公共依赖，所有成员通过 `xxx.workspace = true` 引用
axum = { version = "0.8.4", features = ["tokio"] }
chrono = { version = "0.4", features = ["serde", "utc"] }
dotenv = "0.15.0"
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-native-tls", "macros", "chrono"] }
thiserror = "2.0.16"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6.6", features = ["trace"] }
aes-gcm = "0.10.3"
hex = "0.4.3"