


[workspace]
resolver = "2"       # 使用 Cargo v2 依赖解析器，确保依赖一致性
members = ["shared", "server", "client",]


[workspace.dependencies]
# 声明公共依赖，所有成员通过 `xxx.workspace = true` 引用
## GUI 组件
iced = { version = "0.13.1", features = ["tokio", "wgpu"] }
iced_aw = { version = "0.12.2", features = ["menu"] }
## 异步运行时
tokio = { version = "1.47.1", features = ["full"] }

## Web 服务器
axum = { version = "0.8.4", features = ["tokio"] }

## Web 客户端
reqwest = { version = "0.12.23", features = ["json", "stream"] }

## 数据库
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-native-tls", "macros", "chrono"] }

chrono = { version = "0.4.41", features = ["serde", "utc"] }
dotenv = "0.15.0"
once_cell = "1.21.3"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6.6", features = ["trace"] }
aes-gcm = "0.10.3"
hex = "0.4.3"