[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.12.1"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"] }

shared = { path = "../shared" }

base64 = "0.22.1"
log = "0.4"
env_logger = "0.11"
derivative = "2.2.0"
chrono = "0.4.41"
uuid = { version = "1.4.0", features = ["v4"] }
once_cell = "1.21.3"
anyhow = "1.0.98"
toml = "0.9.4"
platform-dirs = "0.3.0"

[build-dependencies]
duct = "1.0.0"
slint-build = "1.12.1"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "3.0.5"