[package]
name = "ecipher-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.0", features = ["full"] }
shared = { path = "../shared" }
rand = "0.9.2"
chacha20poly1305 = "0.10.1"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-native-tls", "migrate", "macros", "chrono"] }
dotenv = "0.15.0"
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.4", features = ["trace"] }
aes-gcm = "0.10.1"
hex = "0.4.3"
base64 = "0.21.7"
getrandom = "0.2.14"
sha2 = "0.10.8"
chrono = { version = "0.4", features = ["serde", "std"] }